// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table basic rendering render dynamic content 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit show-quick-actions-on-hover table-hover table-list"
    >
      <thead>
        <tr>
          <th
            class="table-head-title"
            data-id="string,name"
            tabindex="-1"
          >
            Name
          </th>
          <th
            class="table-head-title"
            data-id="string,type"
            tabindex="-1"
          >
            Type
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class=""
          data-id="number,1"
          tabindex="-1"
        >
          <td
            aria-colindex="0"
            class=""
            data-id="string,name"
            tabindex="-1"
          >
            Foo
          </td>
          <td
            aria-colindex="1"
            class=""
            data-id="string,type"
            tabindex="-1"
          >
            Foo
          </td>
        </tr>
        <tr
          class=""
          data-id="number,2"
          tabindex="-1"
        >
          <td
            aria-colindex="0"
            class=""
            data-id="string,name"
            tabindex="-1"
          >
            Bar
          </td>
          <td
            aria-colindex="1"
            class=""
            data-id="string,type"
            tabindex="-1"
          >
            Bar
          </td>
        </tr>
        <tr
          class=""
          data-id="number,3"
          tabindex="-1"
        >
          <td
            aria-colindex="0"
            class=""
            data-id="string,name"
            tabindex="-1"
          >
            Baz
          </td>
          <td
            aria-colindex="1"
            class=""
            data-id="string,type"
            tabindex="-1"
          >
            Baz
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table basic rendering render static content 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit show-quick-actions-on-hover table-hover table-list"
    >
      <thead>
        <tr>
          <th
            class="table-head-title"
            data-id="string,name"
            tabindex="-1"
          >
            Name
          </th>
          <th
            class="table-head-title"
            data-id="string,type"
            tabindex="-1"
          >
            Type
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class=""
          data-id="string,undefined"
          tabindex="-1"
        >
          <td
            aria-colindex="0"
            class=""
            data-id="string,$.0"
            tabindex="-1"
          >
            Foo
          </td>
          <td
            aria-colindex="1"
            class=""
            data-id="string,$.1"
            tabindex="-1"
          >
            Foo
          </td>
        </tr>
        <tr
          class=""
          data-id="string,undefined"
          tabindex="-1"
        >
          <td
            aria-colindex="0"
            class=""
            data-id="string,$.0"
            tabindex="-1"
          >
            Bar
          </td>
          <td
            aria-colindex="1"
            class=""
            data-id="string,$.1"
            tabindex="-1"
          >
            Bar
          </td>
        </tr>
        <tr
          class=""
          data-id="string,undefined"
          tabindex="-1"
        >
          <td
            aria-colindex="0"
            class=""
            data-id="string,$.0"
            tabindex="-1"
          >
            Baz
          </td>
          <td
            aria-colindex="1"
            class=""
            data-id="string,$.1"
            tabindex="-1"
          >
            Baz
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table basic rendering render with sort column 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit show-quick-actions-on-hover table-hover table-list"
    >
      <thead>
        <tr>
          <th
            aria-colindex="0"
            aria-describedby="clay-id-13"
            aria-sort="none"
            class="table-head-title"
            data-id="string,name"
            tabindex="-1"
          >
            <a
              class="inline-item text-truncate-inline"
              href="#"
              role="presentation"
            >
              <span
                class="text-truncate"
              >
                Name
              </span>
            </a>
          </th>
          <th
            aria-colindex="1"
            aria-describedby="clay-id-13"
            aria-sort="none"
            class="table-head-title"
            data-id="string,type"
            tabindex="-1"
          >
            <a
              class="inline-item text-truncate-inline"
              href="#"
              role="presentation"
            >
              <span
                class="text-truncate"
              >
                Type
              </span>
            </a>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class=""
          data-id="string,undefined"
          tabindex="-1"
        >
          <td
            aria-colindex="0"
            class=""
            data-id="string,$.0"
            tabindex="-1"
          >
            Foo
          </td>
          <td
            aria-colindex="1"
            class=""
            data-id="string,$.1"
            tabindex="-1"
          >
            Foo
          </td>
        </tr>
        <tr
          class=""
          data-id="string,undefined"
          tabindex="-1"
        >
          <td
            aria-colindex="0"
            class=""
            data-id="string,$.0"
            tabindex="-1"
          >
            Bar
          </td>
          <td
            aria-colindex="1"
            class=""
            data-id="string,$.1"
            tabindex="-1"
          >
            Bar
          </td>
        </tr>
        <tr
          class=""
          data-id="string,undefined"
          tabindex="-1"
        >
          <td
            aria-colindex="0"
            class=""
            data-id="string,$.0"
            tabindex="-1"
          >
            Baz
          </td>
          <td
            aria-colindex="1"
            class=""
            data-id="string,$.1"
            tabindex="-1"
          >
            Baz
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table basic rendering render with treegrid 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      aria-label="File Explorer"
      class="table table-autofit show-quick-actions-on-hover table-hover table-list table-nested-rows"
      role="treegrid"
    >
      <thead>
        <tr>
          <th
            class="table-head-title"
            data-id="string,name"
            role="gridcell"
            tabindex="-1"
          >
            <div
              class="autofit-row"
              style="padding-left: 28px;"
            >
              <div
                class="autofit-col autofit-col-expand"
              >
                Name
              </div>
            </div>
          </th>
          <th
            class="table-head-title"
            data-id="string,type"
            role="gridcell"
            tabindex="-1"
          >
            Type
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          aria-level="1"
          aria-posinset="1"
          aria-setsize="3"
          class=""
          data-id="number,1"
          role="row"
          tabindex="0"
        >
          <td
            aria-colindex="0"
            class=""
            data-id="string,1:name"
            role="gridcell"
            tabindex="-1"
          >
            <div
              class="autofit-row"
              style="padding-left: 28px;"
            >
              <div
                class="autofit-col autofit-col-expand"
              >
                Folder A
              </div>
            </div>
          </td>
          <td
            aria-colindex="1"
            class=""
            data-id="string,1:type"
            role="gridcell"
            tabindex="-1"
          >
            Folder
          </td>
        </tr>
        <tr
          aria-expanded="false"
          aria-level="1"
          aria-posinset="2"
          aria-setsize="3"
          class=""
          data-id="number,2"
          role="row"
          tabindex="-1"
        >
          <td
            aria-colindex="0"
            class=""
            data-id="string,2:name"
            role="gridcell"
            tabindex="-1"
          >
            <div
              class="autofit-row"
              style="padding-left: -4px;"
            >
              <div
                class="autofit-col-toggle autofit-col"
              >
                <button
                  aria-label="expandable"
                  class="btn btn-monospaced btn-outline-borderless btn-outline-secondary btn-xs"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-angle-right"
                    role="presentation"
                  >
                    <use
                      href="#angle-right"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="autofit-col autofit-col-expand"
              >
                Folder B
              </div>
            </div>
          </td>
          <td
            aria-colindex="1"
            class=""
            data-id="string,2:type"
            role="gridcell"
            tabindex="-1"
          >
            Folder
          </td>
        </tr>
        <tr
          aria-level="1"
          aria-posinset="3"
          aria-setsize="3"
          class=""
          data-id="number,10"
          role="row"
          tabindex="-1"
        >
          <td
            aria-colindex="0"
            class=""
            data-id="string,10:name"
            role="gridcell"
            tabindex="-1"
          >
            <div
              class="autofit-row"
              style="padding-left: 28px;"
            >
              <div
                class="autofit-col autofit-col-expand"
              >
                Folder C
              </div>
            </div>
          </td>
          <td
            aria-colindex="1"
            class=""
            data-id="string,10:type"
            role="gridcell"
            tabindex="-1"
          >
            Folder
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
